--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "theme_color": "#4f4f4f",
   "icons": [
     {
-      "src": "./img/icon.png",
+      "src": "./stark-player/img/icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
