--- a/standalone/package.json
+++ b/standalone/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wwwall",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "WWWall mp3 playlist casting utility.",
   "author": "Adrian Burlacu <adrian.burlacu@live.com>",
   "license": "MIT",
@@ -33,6 +33,7 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "browser-env-vars": "^1.1.1",
     "envfile": "^6.17.0",
     "events": "^3.3.0",
     "flat-promise": "^1.0.2",
